--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,4 +30,5 @@ wasm-timer = "0.2"
 [dev-dependencies]
 libp2p = { version = "0.50", features = ["full"] }
 clap = { version = "4.1", features = ["derive"] }
+tokio = { version = "1", features = ["full"] }
 env_logger = "0.10"
