--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,6 @@ async-std = ["dep:async-std", "igd-next/aio_async_std", "natpmp/async-std"]
 [dependencies]
 libp2p = { version = "0.51" }
 futures = "0.3"
-natpmp = { version = "0.4", default-features = false }
 igd-next = { version = "0.13", default-features = false }
 void = "1"
 tokio = { version = "1", optional = true, features = ["full"] }
@@ -26,6 +25,9 @@ async-std = { version = "1", optional = true }
 log = "0.4"
 anyhow = "1"
 wasm-timer = "0.2"
+
+[target.'cfg(not(target_os = "ios"))'.dependencies]
+natpmp = { version = "0.4", default-features = false }
 
 [dev-dependencies]
 libp2p = { version = "0.51", features = ["full"] }
