--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ async-std = { version = "1", optional = true }
 log = "0.4"
 anyhow = "1"
 wasm-timer = "0.2"
+thiserror = "1"
 
 [target.'cfg(not(target_os = "ios"))'.dependencies]
 natpmp = { version = "0.4", default-features = false }
