--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ tokio = { version = "1", optional = true, features = ["full"] }
 async-std = { version = "1", optional = true }
 log = "0.4"
 anyhow = "1"
-wasm-timer = "0.2"
+futures-timer = "3.0"
 thiserror = "1"
 
 [target.'cfg(not(target_os = "ios"))'.dependencies]
